--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,10 @@ inputs:
     description: "Optional relative path to your presentation markdown file. Defaults to presentation.md in your repo"
     default: "presentation.md"
     required: false
+  static-html-path:
+    description: "Optional relative path to a custom HTML file to serve the presentation. Defaults to the default HTML example from Remark"
+    default: "DEFAULT_HTML_PATH"
+    required: false
   repo-token:
     description: Access token that can pull and push to the given repository
     required: true
@@ -24,16 +28,19 @@ runs:
       run: "git clone https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git base"
       shell: bash
     - id: clone-base-repo-for-pages
-      run: "git clone --single-branch --branch ${{inputs.pages-branch}} https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git pages || git clone https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git pages && git -C ./pages checkout -b ${{inputs.pages-branch}} && git -C ./pages push --set-upstream origin ${{inputs.pages-branch}}"
-      shell: bash
-    - id: cd-to-base
-      run: "rm -rf "
+      run: "git clone --single-branch --branch ${{inputs.pages-branch}} https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git pages || { git clone https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git pages && git -C ./pages checkout -b ${{inputs.pages-branch}} && git -C ./pages push --set-upstream origin ${{inputs.pages-branch}} }"
       shell: bash
     - id: copy-markdown
       run: "cp base/${{inputs.markdown-path}} ./pages/presentation.md"
       shell: bash
     - id: copy-html
-      run: "cp ${{ github.action_path }}/boilerplate.html ./pages/index.html"
+      run: |
+        if [ ${{inputs.static-html-path}} == "DEFAULT_HTML_PATH" ]; then
+          cp ${{ github.action_path }}/boilerplate.html ./pages/index.html"
+        else
+          cd base
+          cp ${{inputs.static-html-path}} ../pages/index.html
+        fi
       shell: bash
     - id: commit-and-push
       run: |
