--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ runs:
       run: "git clone https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git base"
       shell: bash
     - id: clone-base-repo-for-pages
-      run: "git clone --single-branch --branch ${{inputs.pages-branch}} https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git pages || { git clone https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git pages && git -C ./pages checkout -b ${{inputs.pages-branch}} && git -C ./pages push --set-upstream origin ${{inputs.pages-branch}}; }"
+      run: "echo 'git clone --single-branch --branch ${{inputs.pages-branch}} https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git pages || { git clone https://x-access-token:${{inputs.repo-token}}@github.com/${{github.repository}}.git pages && git -C ./pages checkout -b ${{inputs.pages-branch}} && git -C ./pages push --set-upstream origin ${{inputs.pages-branch}}; }'"
       shell: bash
     - id: copy-markdown
       run: "cp base/${{inputs.markdown-path}} ./pages/presentation.md"
