Fix error handling

--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,6 @@ inputs:
     description: Access token that can pull and push to the given repository
     required: true
 runs:
-  continue-on-error: true
   using: "composite"
   steps:
     - id: create-base-directories
@@ -54,6 +53,6 @@ runs:
         git -C ./pages config user.name github-actions
         git -C ./pages config user.email github-actions@github.com
         git -C ./pages add ./index.html presentation.md
-        git -C ./pages commit -m 'Auto commit from Remarkable GitHub Action build'
-        git -C ./pages push
+        git -C ./pages commit -m 'Auto commit from Remarkable GitHub Action build' || exit 0
+        git -C ./pages push || exit 0
       shell: bash
