--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Remarkable Actions"
+name: "Remarkable Pages"
 description: "Automatically serve your Remark presentation with GitHub Pages"
 branding:
   icon: 'star'
